# mainWindow

./: CMakeLists.txt  InternalSpy.cpp  InternalSpy.h  MainWindows_en_US.ts  colorswatch.cpp  colorswatch.h  dockmanager.cpp  dockmanager.h  layoutmanager.cpp  layoutmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  menumanager.cpp  menumanager.h  test.sh
